--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "main": "dist/index.js",
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
+    "registry":"https://npm.pkg.github.com/cbetjio"
   },
   "scripts": {
     "build": "webpack --mode production",
